--- a/_config.yml
+++ b/_config.yml
@@ -7,13 +7,13 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Muhammad Haroon Shakeel"
+title                    : "Waseem Abbas"
 title_separator          : "-"
-name                     : &name "Muhammad Haroon Shakeel"
+name                     : &name "Waseem Abbas"
 description              : &description "personal description"
-url                      : https://haroonshakeel.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://waseemabbas.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "haroonshakeel/haroonshakeel.github.io"
+repository               : "waseemabbaas/waseemabbas.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
@@ -80,7 +80,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Muhammad Haroon Shakeel"
+  name             : "Waseem Abbas"
   avatar           : "profile.jpg"
   bio              : "NLP | Deep Learning | Computer Vision | Machine Learning | Data Analytics | Information Retrieval | Artificial Intelligence"
   location         : "Lahore, Pakistan"
